# SWAEV_TUI

./: README.md  client.py  install.sh  pyproject.toml
swaev/: __main__.py
